kubernetes/apps/default/bookstack/httproute.yaml
---
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bookstack
spec:
  parentRefs:
  - name: external
    namespace: network
  hostnames:
  - "wiki.${SECRET_DOMAIN}"
  rules:
  - backendRefs:
    - name: bookstack-app
      port: 80
